add_library(hexutil
    hexutil.hpp
    hexutil.cpp
)
target_link_libraries(hexutil
    PUBLIC
    outcome
)
supergenius_install(hexutil)

add_library(buffer
    buffer.hpp
    buffer.cpp
)
target_link_libraries(buffer
    PUBLIC
    Boost::headers
    outcome
    PRIVATE
    hexutil
)
supergenius_install(buffer)

add_library(blob
    blob.hpp
    blob.cpp
)
target_link_libraries(blob
    PUBLIC
    hexutil
    Boost::headers
)
supergenius_install(blob)

add_library(logger
    logger.hpp
    logger.cpp
)
target_link_libraries(logger
    PUBLIC
    spdlog::spdlog
)
supergenius_install(logger)

add_library(mp_utils
    mp_utils.cpp
    mp_utils.hpp
)
target_link_libraries(mp_utils
    PUBLIC
    Boost::headers
)
supergenius_install(mp_utils)

add_library(fixed_point
    fixed_point.cpp
    fixed_point.hpp
)
target_link_libraries(fixed_point
    PUBLIC
    Boost::headers
    outcome
)
supergenius_install(fixed_point)
