add_proto_library(SGProofProto proto/SGProof.proto)

add_library(genius_prover
    GeniusProver.cpp
)
add_library(genius_assigner
    GeniusAssigner.cpp
)
add_library(transfer_proof
    TransferProof.cpp
)
add_library(basic_proof
    IBasicProof.cpp
)

target_link_libraries(genius_assigner
    outcome
    Boost::boost
    Boost::log
    #Boost::json
    LLVMIRReader
    LLVMCore
    LLVMSupport
)
target_link_libraries(genius_prover
    genius_assigner
    outcome
    Boost::boost
)
target_link_libraries(basic_proof
    genius_assigner
    genius_prover
    outcome
    SGProofProto
)
target_link_libraries(transfer_proof
    genius_assigner
    genius_prover
    basic_proof
    SGProofProto
    outcome
    Boost::boost
    Boost::log
    #Boost::json
    Boost::unit_test_framework
)

supergenius_install(genius_assigner)
supergenius_install(genius_prover)
supergenius_install(transfer_proof)
supergenius_install(basic_proof)