add_library(transaction_pool_error
    transaction_pool_error.cpp
)
target_link_libraries(transaction_pool_error
    PUBLIC
    outcome
)

add_library(pool_moderator
    impl/pool_moderator_impl.cpp
)
target_link_libraries(pool_moderator
    PUBLIC
    Boost::headers
    primitives
    clock
)

add_library(transaction_pool
    impl/transaction_pool_impl.cpp
)
target_link_libraries(transaction_pool
    PUBLIC
    outcome
    pool_moderator
    logger
    block_header_repository
    PRIVATE
    transaction_pool_error
)
